--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <section class="games" id="games  ">
-        
+
         <header>
             <img src="./assets/images/wraper.png" class="w-100" alt="game photo" />
         </header>
@@ -140,7 +140,7 @@
 
 
     <!--' ============ BootStrap JS File ============ -->
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
     <!--' ============ Main Js File ============ -->
     <script src="./js/index.js" type="module"></script>
 </body>
